Remove extra decimal
Signed-off-by: angela <33108490+angela-d@users.noreply.github.com>

--- a/config-template.conf
+++ b/config-template.conf
@@ -1,7 +1,7 @@
 ORGNAME=Example
 INTERNAL_CHECK=print.example.com
 LATENCY_DEST=http://status.example.com/
-NAT_IP=9.9.9.9.
+NAT_IP=9.9.9.9
 NS1=172.16.4.1
 NS2=172.16.4.2
 SKIP_PRELIM=1
