Add reload menu option
Signed-off-by: angela <33108490+angela-d@users.noreply.github.com>

--- a/config-template.conf
+++ b/config-template.conf
@@ -13,5 +13,6 @@ ORG_DNS=example.com
 AP_LIST=http://arrays.example.com/arrays.txt
 MAC_LIST=http://arrays.example.com/macs.txt
 AP_MANUFACTURER=Ubiquiti
+RELOAD_MENU=0
 DEFAULT_TEST=
 SETUP_DONE=0
